--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -20,7 +20,6 @@
 
     <div class="container-fluid about_us">
 
-      <p class="text-banner width-40 mobile-width-90  mobile-margin-left-5 mobile-text-center stylized-black text-left margin-left-2 mobile-font-30">Our Values</p>
 
         <%- include("./../layout/home/about.ejs")  %>
 
@@ -50,5 +49,12 @@
 
   <script src = "./assets/js/dropdown.js"></script>
   <script src = "./assets/js/modal.js"></script>
+
+  <div style="margin-top:40%; z-index:9999;position:relative">
+
+  <%- include("./../layout/footer.ejs") %>
+  </div>
+
+
 
   <%- include("./../layout/end.ejs") %>
