--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -1,11 +1,12 @@
-<div class="what_we_do_container relative">
+<div class="what_we_do_container relative" style="background:url('./assets/images/showcase_2.png');background-size:cover;padding-bottom:40%;padding-top:10%">
 
-    <img src = "./assets/images/showcase_2.png" class="what_we_do_image absolute z-3 width-100 top-0 mobile-relative mobile-padding-bottom-10 mobile-padding-top-20"/>
       <div class="what_we_do_inner absolute z-3 top-0">
         <div class="row">
 
           <div class="col-5 padding-left-2_5 mobile-col-6_">
-            <p class="what_we_do_title white padding-top-5 font-70 text-left akrobat bold mobile-font-30"> What We Do </p>
+            <br />
+            <br />
+            <p class="what_we_do_title white padding-top-10 font-70 text-left akrobat bold mobile-font-30"> What We Do </p>
 
               <p class="what_we_do_description font-25 white text-left padding-top-5 akrobat mobile-font-18">
                   A business that looks well maintained is successful. Our company specializes in cleaning windows and patios to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.  Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
