--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -1,29 +1,30 @@
 <div class="work_container relative">
 
+
       <div class="what_we_do_inner we_clean_inner width-100 padding-top-5 padding-bottom-10">
         <div class="row mobile-margin-top-5">
+<p class="white margin-top-5 font-60 mobile-text-center text-left margin-left-10 width-100"style="margin-left:5%"> What We Clean </p>
+          <div class="col-6 mobile-col-12 padding-left-5 padding-bottom-10">
 
-          <div class="col-6 mobile-col-12 padding-left-5">
 
-              <p class="what_we_do_title we_clean  white width-100 margin-top-5 font-40 mobile-text-center "> What We Clean </p>
 
-              <p class="what_we_do_description white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-30 width-40 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description  text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
                 Window Panes
               </p>
 
-              <p class="what_we_do_description white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-30 width-40 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
                 Window Ledges
               </p>
 
-              <p class="what_we_do_description white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-30 width-40 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
                 Door Frames
               </p>
 
-              <p class="what_we_do_description margin-top-5  white mobile-text-center we_clean_descr red-bottom-border font-30 width-40 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description text-center margin-top-5  white mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
                 Window Frames
               </p>
 
-              <p class="what_we_do_description margin-top-5 white mobile-text-center we_clean_descr red-bottom-border font-30 width-40 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description text-center margin-top-5 white mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
                 Door Bottoms
               </p>
 
