--- a/views/layout/home/about.ejs
+++ b/views/layout/home/about.ejs
@@ -1,22 +1,28 @@
 <div class="row value_row mobile-margin-top-10">
 
     <div class="col-5 values_container mobile-col-12">
+      <p class="text-banner width-90 mobile-width-100  mobile-margin-left-5 mobile-text-center padding-left-5 stylized-black text-left margin-left-5 mobile-font-30">Our Values</p>
+
 
         <% if(values.length > 0){ %>
             <% for(var i = 0; i < values.length; i++){ %>
-            <div class="text-about-us-box dropdown-box padding-1 padding-top-5 width-90 margin-left-5 padding-left-5 light-navy-shadow margin-top-1 background-006" _id = <%= i %>>
+            <div class="text-about-us-box dropdown-box padding-1 padding-left-5 padding-top-5 width-90 margin-left-5 padding-left-5 light-navy-shadow margin-top-1 background-006" _id = <%= i %>>
+
               <div class="row">
+
                 <div class="col-10">
-                <p class="about-us-text akrobat text-left akrobat font-35 light-font white mobile-font-30"><%= values[i].title %></p>
+                  <p class="about-us-text akrobat text-left akrobat font-35 padding-left-2_5 light-font white mobile-font-30"><%= values[i].title %></p>
                 </div>
 
-                  <div class="col-2">
+                <div class="col-2">
                     <img src ="./assets/images/dropdown_arrow.png" class="dropdown_arrow half-middle"  _id = <%= i %>>
-                  </div>
                 </div>
+
+              </div>
+
                 <div class="dropdown_container margin-top-2_5 padding-bottom-5 ghost">
                     <div className="divder_dropdown"></div>
-                    <p class="dropdown_text  akrobat font-20 normal">
+                    <p class="dropdown_text akrobat font-20 normal">
                       <%= values[i].description %>
                     </p>
                   </div>
@@ -29,7 +35,7 @@
         <div class="text-about-us-box_4 margin-top-10 padding-1 padding-top-5 width-90 margin-left-5 padding-left-5 light-navy-shadow margin-top-1 background-00 ">
             <p class="about-us-text_about_link  akrobat text-center akrobat font-35 light-font white white mobile-font-30">Learn More About Us!</p>
         </div>
-        
+
     </div>
 
     <div class="col-1"></div>
