--- a/views/layout/home/contact.ejs
+++ b/views/layout/home/contact.ejs
@@ -2,10 +2,12 @@
     <div class="showboxcontact relative margin-top-10 width-100">
         <div class="blueboxcontact2 absolute background-006 width-20 z-3"></div>
         <div class="blueboxcontact2 right-20 background-005"></div>
-        <div class="supportbox absolute width-80 z-5 background-c7 mobile-margin-right-10">
+        <div class="supportbox absolute width-80 z-5 background-c7 mobile-margin-right-10 margin-right-10">
+
             <img class="showimg height-100 width-100 margin-top-30 z-4 mobile-margin-top-70" src = "./assets/images/show.png"/>
             <p class="titleshow text-center width-100 white akrobat font-60 text-center absolute z-9 mobile-font-30">Get Quoted Today!</p>
             <p class="titleshow2 text-center width-100 white akrobat font-20 text-center absolute z-9 mobile-font-20">We will reach back as fast as possible!</p>
+
             <div class="quotebutton margin-left-10-import width-100 heavy-shadow no-outline font-30 padding-1 absolute akrobat text-center white black-background width-30">
                 <p class="white text-center padding-top-2_5 font-25" >Recieve a Free Quote!</p>
             </div>
