--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -23,13 +23,10 @@
           <% for(let images of before_and_after_images) { %>
             <div class="row">
 
-                <div class="col-6 relative margin-top-5">
-                    <div class="adjust-right top-30px min-z darker-navy-background absolute height-100 mobile-height-120 absolute import-width-100"></div>
+                <div class="col-6 relative margin-top-2_5  darker-navy-background padding-5">
                     <img class=" width-100 height-100 relative mobile-margin-top-10" src ="<%= images.before %>" />
                 </div>
-                <div class="col-6 relative margin-top-5" >
-
-                    <div class="adjust-left top-30px min-z dark-navy-background absolute height-100 mobile-height-120 absolute import-width-100"></div>
+                <div class="col-6 relative margin-top-2_5 dark-navy-background padding-5" >
                     <img class=" width-100 height-100  mobile-margin-top-10" src ="<%= images.after %>"  />
                 </div>
             </div>
