--- a/views/layout/quote_form.ejs
+++ b/views/layout/quote_form.ejs
@@ -1,5 +1,5 @@
 
-<div style="position:absolute;left;top:65%;left:10%;width:30%;z-index:99;background:white;padding:2%">
+<div class="absolute width-30 mobile-width-80 z-99 white-background padding-2 mobile-padding-5 home_quote_container">
   <div class="row">
       <div class="col-12">
         <div class="quotesheet_container width-100" >
