--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -8,23 +8,23 @@
 
 
 
-              <p class="what_we_do_description  text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description  text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50 mobile-font-20 mobile-margin-left-22_5">
                 Window Panes
               </p>
 
-              <p class="what_we_do_description text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50  mobile-font-20 mobile-margin-left-22_5">
                 Window Ledges
               </p>
 
-              <p class="what_we_do_description text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50  mobile-font-20 mobile-margin-left-22_5">
                 Door Frames
               </p>
 
-              <p class="what_we_do_description text-center margin-top-5  white mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description text-center margin-top-5  white mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50  mobile-font-20 mobile-margin-left-22_5">
                 Window Frames
               </p>
 
-              <p class="what_we_do_description text-center margin-top-5 white mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-font-20 mobile-margin-left-22_5">
+              <p class="what_we_do_description text-center margin-top-5 white mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50  mobile-font-20 mobile-margin-left-22_5">
                 Door Bottoms
               </p>
 
