--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -881,6 +881,10 @@ cursor: auto;
 .mobile-margin-left-25{
   margin-left:25% !important;
 }
+
+.mobile-margin-left-20{
+  margin-left:20% !important;
+}
 .mobile-font-40{
   font-size:40px;
 
