--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -4,7 +4,7 @@
       <div class="what_we_do_inner we_clean_inner width-100 padding-top-5 padding-bottom-10">
         <div class="row mobile-margin-top-5">
 <p class="white margin-top-5 font-60 mobile-font-40 mobile-text-center text-left margin-left-10 width-100 margin-left-5 mobile-margin-left-0"> What We Clean </p>
-          <div class="col-6 mobile-col-12 padding-left-5 padding-bottom-10">
+          <div class="col-6 mobile-col-12 padding-bottom-10">
 
 
 
