--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -23,11 +23,11 @@
           <% for(let images of before_and_after_images) { %>
             <div class="row">
 
-                <div class="col-6 relative margin-top-2_5  darker-navy-background padding-5">
-                    <img class=" width-100 height-100 relative mobile-margin-top-10" src ="<%= images.before %>" />
+                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 darker-navy-background padding-5">
+                    <img class=" width-100 height-100 relative" src ="<%= images.before %>" />
                 </div>
                 <div class="col-6 relative margin-top-2_5 dark-navy-background padding-5" >
-                    <img class=" width-100 height-100  mobile-margin-top-10" src ="<%= images.after %>"  />
+                    <img class=" width-100 height-100" src ="<%= images.after %>"  />
                 </div>
             </div>
           <%}%>
