--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -26,7 +26,7 @@
                 <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 darker-navy-background padding-5">
                     <img class=" width-100 height-100 relative" src ="<%= images.before %>" />
                 </div>
-                <div class="col-6 relative margin-top-2_5 dark-navy-background padding-5" >
+                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 dark-navy-background padding-5" >
                     <img class=" width-100 height-100" src ="<%= images.after %>"  />
                 </div>
             </div>
