--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -50,7 +50,7 @@
   <script src = "./assets/js/dropdown.js"></script>
   <script src = "./assets/js/modal.js"></script>
 
-  <div style="margin-top:40%; z-index:9999;position:relative">
+  <div class="footer_wrapper_home">
 
   <%- include("./../layout/footer.ejs") %>
   </div>
