--- a/views/layout/end.ejs
+++ b/views/layout/end.ejs
@@ -6,6 +6,7 @@
   <script src ="./assets/js/navbar_render.js"></script>
   <script src ="./assets/js/modal.js"></script>
   <script src = "./assets/js/quote_images.js"></script>
+  <script src = "./assets/js/mobile_image_switch.js"></script>
 
 </body>
 
