--- a/views/layout/new_showcase.ejs
+++ b/views/layout/new_showcase.ejs
@@ -33,7 +33,7 @@
     </div>
 
   <div class="showcase_image_container">
-      <img src ='<%= showcase.showcase_img %>' class="width-100 showcase_image" id="quote_showcase_background"/>
+      <img src ='<%= showcase.showcase_img %>' class="width-100 showcase_image" id="mobile_showcase"/>
   </div>
 
 </div>
