--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -25,3 +25,4 @@
   <%- include("./../layout/footer.ejs") %>
 
   <%- include("./../layout/end.ejs") %>
+  <script src = "./assets/js/contact_showcase.js"></script>
