--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -30,4 +30,6 @@
 <%- include("./../layout/footer.ejs") %>
 
 
+
 <%- include("./../layout/end.ejs") %>
+<script src = "./assets/js/quote_showcase.js"></script>
