--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -48,7 +48,7 @@
             Contact us and schedule a window cleaning today and brighten your house or business today!
           </p>
         </div>
-        
+
         <!-- Grid column -->
 
         <!-- Grid column -->
@@ -76,7 +76,7 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> Phoenix, Arizona, 505-959-5554</p>
+          <p><i class="fas fa-home me-3"></i> Phoenix, Arizona, 85260 <br/></p>
           <p>
             <i class="fas fa-envelope me-3"></i>
             info@customfacilityservices.com
