--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="text-center text-lg-start body-background white margin-top-5 ">
   <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+  <section class="d-flex justify-content-center justify-content-lg-between ">
     <!-- Left -->
     <div class="me-5 d-none d-lg-block">
       <span></span>
@@ -91,10 +91,7 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    <!-- © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
-  </div>
+
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
