--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -14,7 +14,7 @@
   padding-bottom:0% !important;
 }
 .body-background{
-  background:#0069a4
+  background:#257AAB
 }
  .no-style-button, .no-style-input[type="submit"] {
 	background: none;
