--- a/views/layout/home/contact.ejs
+++ b/views/layout/home/contact.ejs
@@ -4,7 +4,7 @@
         <div class="blueboxcontact2 right-20 background-005"></div>
         <div class="supportbox absolute width-80 z-5 background-c7 mobile-margin-right-10 margin-right-10">
 
-            <img class="showimg height-100 width-100 margin-top-30 z-4 mobile-margin-top-70" src = "./assets/images/show.png"/>
+            <img class="width-100 z-4 mobile-margin-top-70 showimg" id="showid" src = "./assets/images/show_img_desktop.png"/>
             <p class="titleshow text-center width-100 white akrobat font-60 text-center absolute z-9 mobile-font-30">Get Quoted Today!</p>
             <p class="titleshow2 text-center width-100 white akrobat font-20 text-center absolute z-9 mobile-font-20">We will reach back as fast as possible!</p>
 
