--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -38,7 +38,7 @@
 
       <div class="contact_info_section padding-top-3-rem color-01 line-height-1_5 white-background width-100 background-white relative width-100">
           <p class="text-banner width-50 mobile-width-80 text-left mobile-font-25">489-939-9393 </p>
-          <p class="text-banner text-left width-80 mobile-width-90 mobile-font-25">info@customfacilityservices.com </p>
+          <p class="text-banner text-left width-80 mobile-width-90 mobile-font-20">info@customfacilityservices.com </p>
           <%- include("./../layout/home/contact.ejs") %>
       </div>
 
@@ -56,6 +56,11 @@
   </div>
 
 
-
+  <script src = "./assets/js/mobile_image_switch.js"></script>
+  <script>
+      if(window.innerWidth<=844){
+          switch_image("showid","./assets/images/show.png")
+        }
+  </script>
   <%- include("./../layout/end.ejs") %>
   <script src = "./assets/js/home_showcase.js"></script>
