--- a/views/layout/home/about.ejs
+++ b/views/layout/home/about.ejs
@@ -5,10 +5,10 @@
 
         <br />
         <br />
-        
+
         <% if(values.length > 0){ %>
             <% for(var i = 0; i < values.length; i++){ %>
-            <div class="text-about-us-box dropdown-box padding-1 padding-left-5 padding-top-5 width-90 margin-left-5 padding-left-5 light-navy-shadow margin-top-1 background-006" _id = <%= i %>>
+            <div class="text-about-us-box dropdown-box padding-1 padding-left-5 padding-top-5 width-90 margin-left-5 padding-left-5 light-navy-shadow margin-top-1 values-background" _id = <%= i %>>
 
               <div class="row">
 
