--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -169,7 +169,7 @@ color:white !important;
   z-index:99;
 }
 .values-background{
-  background:#25739F;
+  background:#014884;
 }
 
 .negative-z{
@@ -179,11 +179,11 @@ color:white !important;
   background:#005793;
 }
 .width-30{
-  
+
   width:30%;
 }
 label {
-
+margin-top:1.5%;
 }
 
 
