--- a/views/layout/quote_form.ejs
+++ b/views/layout/quote_form.ejs
@@ -8,43 +8,43 @@
 <form action="/modal" method="POST">
 
 <div class="row padding-bottom-5">
-  <div class="col-12">
+  <div class="col-12 padding-top-5">
       <label>
           Full Name
       </label>
       <input class="form-control quote_input akrobat no-radius black-bottom-border font-20 no-border" name="firstName" placeholder="Enter first name" />
   </div>
 
-  <div class="col-6">
+  <div class="col-6 padding-top-5">
       <label>
           Screen Count
       </label>
       <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="screenCount" placeholder="Screen Count" />
   </div>
-  <div class="col-6">
+  <div class="col-6 padding-top-5">
       <label>
           < 4X4 Ft
       </label>
       <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="smWindowCount" placeholder="Window Count" />
   </div>
-  <div class="col-6">
+  <div class="col-6 padding-top-5">
       <label>
           4X4 to 8X8 Ft
       </label>
       <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="mdWindowCount" placeholder="Window Count" />
   </div>
-  <div class="col-6">
+  <div class="col-6 padding-top-5">
       <label>
           > 8X8 Ft
       </label>
       <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="lgWindowCount" placeholder="Window Count" />
   </div>
-  <div class="col-6">
+  <div class="col-6 padding-top-5">
       <input type="hidden" name="key" value = <%= active_path %> placeholder="Enter first name" />
   </div>
   <div class="col-3"></div>
 
-  <div class="col-12">
+  <div class="col-12 ">
     <button class="width-100 margin-top-10 margin-bottom-5 btn white black-background"type="submit"> Receive Quote</button>
   </div>
 
