--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -22,7 +22,8 @@
 
   </div>
 
+  <div style="margin-top:-5%">
   <%- include("./../layout/footer.ejs") %>
-
+  </div>
   <%- include("./../layout/end.ejs") %>
   <script src = "./assets/js/contact_showcase.js"></script>
