--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -22,7 +22,7 @@
 
   </div>
 
-  <div style="margin-top:-5%">
+  <div class="margin-top-5-neg">
   <%- include("./../layout/footer.ejs") %>
   </div>
   <%- include("./../layout/end.ejs") %>
