--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -27,8 +27,9 @@
 
 </div>
 
+<div class="margin-top-5-neg">
 <%- include("./../layout/footer.ejs") %>
-
+</div>
 
 
 <%- include("./../layout/end.ejs") %>
