--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -126,6 +126,9 @@ color:white !important;
 .padding-bottom-20{
   padding-bottom:20%;
 }
+.red-border-bottom{
+  border-bottom:1px solid red !important;
+}
 .background-005{
   background:#005793;
 }
