--- a/views/layout/contact/what_we_do.ejs
+++ b/views/layout/contact/what_we_do.ejs
@@ -2,29 +2,30 @@
 
 
       <div class="what_we_do_inner we_clean_inner width-100 padding-top-5 padding-bottom-10">
+        <p class="text-banner white margin-top-5 font-60 mobile-font-40 mobile-text-center text-left width-40 mobile-width-100 mobile-margin-left-0">     What We Clean </p>
+
         <div class="row mobile-margin-top-5">
-<p class="white margin-top-5 font-60 mobile-font-40 mobile-text-center text-left margin-left-10 width-100 margin-left-5 mobile-margin-left-0"> What We Clean </p>
           <div class="col-6 mobile-col-12 padding-bottom-10">
 
 
 
-              <p class="what_we_do_description  text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50 mobile-font-20 mobile-margin-left-25">
+              <p class="what_we_do_description  text-banner white margin-top-5 mobile-text-center we_clean_descr  font-25 width-50 mobile-width-50 mobile-font-20 mobile-margin-left-25">
                 Window Panes
               </p>
 
-              <p class="what_we_do_description text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50  mobile-font-20 mobile-margin-left-25">
+              <p class="what_we_do_description text-banner white margin-top-5 mobile-text-center we_clean_descr  font-25 width-50 mobile-width-50  mobile-font-20 mobile-margin-left-25">
                 Window Ledges
               </p>
 
-              <p class="what_we_do_description text-center white margin-top-5 mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50  mobile-font-20 mobile-margin-left-25">
+              <p class="what_we_do_description text-banner white margin-top-5 mobile-text-center we_clean_descr font-25 width-50 mobile-width-50  mobile-font-20 mobile-margin-left-25">
                 Door Frames
               </p>
 
-              <p class="what_we_do_description text-center margin-top-5  white mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50  mobile-font-20 mobile-margin-left-25">
+              <p class="what_we_do_description text-banner margin-top-5  white mobile-text-center we_clean_descr  font-25 width-50 mobile-width-50  mobile-font-20 mobile-margin-left-25">
                 Window Frames
               </p>
 
-              <p class="what_we_do_description text-center margin-top-5 white mobile-text-center we_clean_descr red-bottom-border font-25 width-30 mobile-width-50  mobile-font-20 mobile-margin-left-25">
+              <p class="what_we_do_description margin-top-5 white mobile-text-center we_clean_descr text-banner font-25 width-50 mobile-width-50  mobile-font-20 mobile-margin-left-25">
                 Door Bottoms
               </p>
 
