--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -113,6 +113,9 @@ color:white !important;
 .font-60{
   font-size:60px;
 }
+.font-70{
+  font-size:70px;
+}
 .background-c7{
   background:#c71667;
 }
