--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,11 +1,17 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start body-background white margin-top-5 ">
+<footer class="text-center text-lg-start body-background white margin-top-5 relative">
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between ">
     <!-- Left -->
-    <div class="me-5 d-none d-lg-block">
-      <span></span>
-    </div>
+    <span class="me-5 d-none d-lg-block absolute"style="top:10%;left:2.5%">
+        <div class="row">
+          <div class="col-3">
+      <span>
+        <img src = "./assets/images/logo.png"class="width-100" />
+      </span>
+      </div>
+      </div>
+    </span>
     <!-- Left -->
 
     <!-- Right -->
