--- a/views/layout/end.ejs
+++ b/views/layout/end.ejs
@@ -7,6 +7,12 @@
   <script src ="./assets/js/modal.js"></script>
   <script src = "./assets/js/quote_images.js"></script>
   <script src = "./assets/js/mobile_image_switch.js"></script>
+  <script>
+      if(window.innerWidth<=844){
+        var vid = document.getElementById("vid-modal");
+        vid.play();
+      }
+  </script>
 
 </body>
 
