--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -14,6 +14,8 @@
       </div>
 
       <%- include("./../layout/contact/meet_the_owners.ejs") %>
+      <%- include("./../layout/out_clients.ejs") %>
+
 
       <%- include("./../layout/contact/what_we_do.ejs") %>
 
