--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -6,6 +6,14 @@
  }
  .relative{
    position: relative;
+
+ }
+ .black{
+   color:black
+ }
+ .border-bottom-black{
+   border:1px solid black;
+   padding-bottom:1%;
  }
  .margin-top-5-neg{
    margin-top: -5%;
@@ -15,6 +23,16 @@
  }
 .padding-bottom-0{
   padding-bottom:0% !important;
+}
+.padding-top-10{
+  padding-top:10%;
+}
+.padding-bottom-top-10{
+  padding-top:10%;
+  padding-bottom: 10%;
+}
+.padding-bottom-10{
+  padding-bottom: 10%;
 }
 .body-background{
   background:#257AAB
