--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -17,6 +17,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/showcase.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/general.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/animations.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/top_clients.css" />
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/components/header.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
