--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -27,7 +27,7 @@
             <div class="wavy_section width-100">
                 <div class = "wave relative width-100 background-006 max-z"></div>
             </div>
-        <%- include("./../layout/home/top_clients.ejs") %>
+        <%- include("./../layout/out_clients.ejs") %>
 
       </div>
 
