--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1136,6 +1136,13 @@ cursor: auto;
   .mobile-font-25{
     font-size:25px !important;
   }
+  .mobile-half-middle{
+    width:50% !important;
+    margin-left:25% !important;
+  }
+  .mobile-padding-right-5{
+    padding-right:10% !important;
+  }
 
   .mobile-text-center{
     text-align: center !important;
