--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -27,8 +27,10 @@
             <div class="wavy_section width-100">
                 <div class = "wave relative width-100 background-006 max-z"></div>
             </div>
-        <%- include("./../layout/out_clients.ejs") %>
 
+        <div class="mobile-margin-top-20-neg">
+        <%- include("./../layout/out_clients.ejs") %>
+        </div>
       </div>
 
       <div class="contact_section padding-5 relative padding-5 height-300 width-100 mobile-margin-top-30">
