--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -4,7 +4,7 @@
 <div class="row padding-2 mobile-padding-right-5">
   <% for(var i = 0; i < clients.length; i++){ %>
       <div class="col-3 mobile-col-6 margin-top-2_5" style='padding:0%;'>
-    <div class="margin-left-5  margin-top-2_5 relative client_card card padding-bottom-20 heavy-shadow padding-2" >
+    <div class="margin-left-5  margin-top-2_5 relative client_card card padding-bottom-20 mobile-padding-bottom-5 heavy-shadow padding-2" >
         <div style="height:300px">
         <% if(clients[i].small == false) {%>
         <img class="width-100 padding-10 padding-top-5 margin-top-5-neg  "src = "<%= './assets/images/' + clients[i].logo%>"/>
