--- a/public/assets/css/cfs_modal.css
+++ b/public/assets/css/cfs_modal.css
@@ -68,5 +68,13 @@
   .modal_pos{
     top:20% !important;
   }
+  .mobile-col-10{
+    padding-bottom:0 !important;
+  }
+  #modal_exit{
+    color: #1B1742 !important;
+top: 0% !important;
+left: 0% !important;
+  }
 
 }
