--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -29,7 +29,7 @@
 
         <div class="modal-dialog">
 
-          <p class="quote_title font-40  bold akrobat text-center margin-top-10">Your Quote:</p>
+          <p class="quote_title font-40  bold akrobat text-center margin-top-10 mobile-margin-top-20">Your Quote:</p>
 
           <p class="quote_number font-25  bold akrobat text-center margin-top-15" style="margin-top:10%">$<%=modal.outside %> Inside or Outside</p>
           <p class="quote_number font-25 margin-top-2_5 akrobat text-center ">$<%=modal.total_price %> Inside and Outside</p>
