--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1133,9 +1133,12 @@ cursor: auto;
     margin-top:50% !important;
   }
   .mobile-margin-top-20-neg{
-    margin-top: -50% !important;
+    margin-top: -60% !important;
     position: relative;
     z-index: 9999;
+  }
+  .mobile-padding-bottom-5{
+    padding-bottom: 5% !important;
   }
   .mobile-padding-bottom-5{
     padding-bottom: 5% !important;
