--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -9,7 +9,7 @@
         <% if(clients[i].small == false) {%>
         <img class="width-100 padding-10 padding-top-5 margin-top-5-neg  "src = "<%= './assets/images/' + clients[i].logo%>"/>
         <%}else{%>
-          <img class="width-100 padding-10 margin-top-10 padding-top-10 "  src = "<%= './assets/images/' + clients[i].logo%>"/>
+          <img class="width-100 padding-10 margin-top-10  "  src = "<%= './assets/images/' + clients[i].logo%>"/>
 
 
           <%}%>
