--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1140,6 +1140,9 @@ cursor: auto;
   .mobile-padding-bottom-5{
     padding-bottom: 5% !important;
   }
+  .mobile-margin-top-2-neg{
+    margin-top: -2% !important;
+  }
   .mobile-padding-bottom-5{
     padding-bottom: 5% !important;
   }
