--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -28,13 +28,13 @@
                 <div class = "wave relative width-100 background-006 max-z"></div>
             </div>
 
-        <div class="mobile-margin-top-20-neg">
+        <div class="mobile-margin-top-20-neg padding-bottom-5">
         <%- include("./../layout/out_clients.ejs") %>
         </div>
       </div>
 
-      <div class="contact_section padding-5 relative padding-5 height-300 width-100 mobile-margin-top-30">
-          <p class="about-us-title text-banner font-60 width-45 padding-1 stylized-black margin-bottom-5 white padding-left-2_5 contact_us_title mobile-font-35 mobile-width-100 mobile-text-center mobile-margin-top-20 "> Contact Us Today!</p>
+      <div class="contact_section padding-5 relative padding-5 height-300 width-100 ">
+          <p class="about-us-title text-banner font-60 width-45 padding-1 stylized-black margin-bottom-5 white padding-left-2_5 contact_us_title mobile-font-35 mobile-width-100 mobile-text-center mobile-margin-top-10  "> Contact Us Today!</p>
           <div class="blueboxcontact negative-z background-005 width-30 absolute"></div>
       </div>
 
