--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -5,11 +5,11 @@
   <% for(var i = 0; i < clients.length; i++){ %>
       <div class="col-3 mobile-col-6 margin-top-2_5" style='padding:0%;'>
     <div class="margin-left-5  margin-top-2_5 relative client_card card padding-bottom-20 mobile-padding-bottom-5 heavy-shadow padding-2" >
-        <div style="height:300px">
+        <div style="height:300px" class="mobile-height-200px">
         <% if(clients[i].small == false) {%>
         <img class="width-100 padding-10 padding-top-5 margin-top-5-neg  "src = "<%= './assets/images/' + clients[i].logo%>"/>
         <%}else{%>
-          <img class="width-100 padding-10 margin-top-10  "  src = "<%= './assets/images/' + clients[i].logo%>"/>
+          <img class="width-100 padding-10 margin-top-10  mobile-margin-top-2-neg "  src = "<%= './assets/images/' + clients[i].logo%>"/>
 
 
           <%}%>
