--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -14,11 +14,11 @@
                 <div class="row" style="margin-left:0%">
 
                   <div class="before_box width-100" style="height:200px;background:url('./assets/images/before_1.png')">
-                      <p class="text-banner width-40 float-left margin-top-5"> Before </p>
+                      <p class="text-banner width-40 float-left margin-top-5 mobile-width-80"> Before </p>
                   </div>
 
                   <div class="before_box width-100 " style="height:200px;background:url('./assets/images/after_1.png')">
-                      <p class="text-banner width-40 float-right margin-top-50 " style="margin-top:30%"> After </p>
+                      <p class="text-banner mobile-width-80 width-40 float-right margin-top-50 mobile-margin-right-5" style="margin-top:30%"> After </p>
                   </div>
 
                   </div>
