--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -17,8 +17,8 @@
                       <p class="text-banner width-40 float-left margin-top-5 mobile-width-80"> Before </p>
                   </div>
 
-                  <div class="before_box width-100 " style="height:200px;background:url('./assets/images/after_1.png')">
-                      <p class="text-banner mobile-width-80 width-40 float-right margin-top-50 mobile-margin-right-5" style="margin-top:30%"> After </p>
+                  <div class="after_box width-100 " style="height:200px;background:url('./assets/images/after_1.png')">
+                      <p class="text-banner mobile-width-80 width-40 float-right margin-top-50 mobile-margin-right-5 mobile-after" style="margin-top:30%"> After </p>
                   </div>
 
                   </div>
