--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -36,7 +36,7 @@
 
           <div class="quote_contact_us font-25 margin-top-2_5 akrobat text-center margin-top-10">
             <p class="quote_pitch italic  akrobat  text-center font-20">Schedule a Cleaning Now!</p>
-            <button class="btn width-90 btn-danger quote_button_modal width-80 margin-left-5 black  akrobat transparent border-radius-30px relative super-max-z font-20 border-bottom-black">489-494-4094</button>
+            <button class="btn width-90 btn-danger quote_button_modal width-80 margin-left-5 black  akrobat transparent border-radius-30px relative super-max-z font-20 border-bottom-black mobile-font-15">489-494-4094</button>
           </div>
 
       </div>
