--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1132,6 +1132,9 @@ cursor: auto;
   .mobile-margin-top-50{
     margin-top:50% !important;
   }
+  .mobile-font-15{
+    font-size: 15px !important;
+  }
   .mobile-margin-top-20-neg{
     margin-top: -70% !important;
     position: relative;
