--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -14,8 +14,8 @@
       </div>
 
       <%- include("./../layout/contact/meet_the_owners.ejs") %>
-      <div style="padding-top:5%;padding-bottom:5%">
-      <%- include("./../layout/out_clients.ejs") %>
+      <div style="padding-top:5%;padding-bottom:5%;padding-left:5%;">
+        <%- include("./../layout/out_clients.ejs") %>
       </div>
 
       <%- include("./../layout/contact/what_we_do.ejs") %>
