--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -14,7 +14,7 @@
       </div>
 
       <%- include("./../layout/contact/meet_the_owners.ejs") %>
-      <div style="padding-top:5%;padding-bottom:5%;padding-left:5%;">
+      <div style="padding-top:5%;padding-bottom:5%">
         <%- include("./../layout/out_clients.ejs") %>
       </div>
 
