--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1098,7 +1098,9 @@ cursor: auto;
     height:100% !important;
   }
 
-
+.mobile-height-175px{
+  height:175px !important;
+}
   .mobile-margin-top-10{
     margin-top:10%;
   }
